--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,11 +34,11 @@
 <body>
 <div class="container p-5">
   <div class="row my-5 p-3">
-    <form class="col m-5 p-3">
+    <form class="col m-5 p-3" th:action="@{/userReg}" th:href="@{/userReg}" th:object="${userLogin}" method="post">
       <p class="h3 py-2 m-auto">用户注册</p><br><br>
       <div class="form-group d-flex">
         <label class="d-block">用户id</label>
-        <input id="uid" class="form-control" placeholder="请输入用户id" />
+        <input id="uid" class="form-control" th:field="*{userId}" placeholder="请输入用户id" />
       </div>
       <div class="form-group d-flex">
         <label class="inline-block">密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
@@ -47,6 +47,7 @@
                 type="password"
                 class="form-control"
                 placeholder="请输入密码"
+                th:field="*{userId}"
         />
       </div>
       <div class="form-group d-flex">
@@ -55,40 +56,42 @@
                 id="wd"
                 class="form-control"
                 placeholder="请输入初始温度"
+                th:field="*{inittemp}"
         />
       </div>
-      <button
-              id="register"
-              type="button"
-              class="btn blue1 text-white d-block m-auto px-4"
-      >
-        注册
-      </button>
-    </form>
+      <input type="submit" value="Submit" text="注册" class="btn blue2 text-white d-block m-auto px-4"/>
+      <!--       <button
+                    id="register"
+                    type="button"
+                    class="btn blue1 text-white d-block m-auto px-4"
+            >
+              注册
+            </button> -->
+          </form>
 
-    <form class="col m-5 p-3" th:action="@{/userLogin}" th:href="@{/userLogin}" th:object="${userLogin}" method="post">
-      <p class="h3 m-auto">用户登录</p><br></br>
-      <div class="form-group d-flex">
-        <label>用户id</label>
-        <input class="form-control" id="userId" th:field="*{userId}" placeholder="请输入用户id" />
-      </div>
-      <div class="form-group d-flex">
-        <label>密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
-        <input
-                id="password"
-                type="password"
-                class="form-control"
-                placeholder="请输入密码"
-                th:field="*{userId}"
-        />
-      </div>
-      <input type="submit" value="Submit" text="登录" class="btn blue2 text-white d-block m-auto px-4"/>
-<!--      <button-->
+          <form class="col m-5 p-3" th:action="@{/userLogin}" th:href="@{/userLogin}" th:object="${userLogin}" method="post">
+            <p class="h3 m-auto">用户登录</p><br></br>
+            <div class="form-group d-flex">
+              <label>用户id</label>
+              <input class="form-control" id="userId" th:field="*{userId}" placeholder="请输入用户id" />
+            </div>
+            <div class="form-group d-flex">
+              <label>密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
+              <input
+                      id="password"
+                      type="password"
+                      class="form-control"
+                      placeholder="请输入密码"
+                      th:field="*{userId}"
+              />
+            </div>
+            <input type="submit" value="Submit" text="登录" class="btn blue2 text-white d-block m-auto px-4"/>
+      <!--      <button-->
 <!--              id="login"-->
 <!--              type="button"-->
-<!--      >-->
+<!--      >
 
-      </button>
+      </button>-->
     </form>
   </div>
 </div>
