--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -45,9 +45,9 @@
         </tbody>
       </table>
     </div>
-    <a href="../../../../../../hotel_FP3.0/index.html" class="back-btn">Back</a>
+    <a href="../templates/index.html" class="back-btn">Back</a>
   </body>
-  <script src="../Static/js/jquery-1.11.1.js"></script>
+  <script src="../static/js/jquery-1.11.1.js"></script>
   <script>
     $(function () {
 
