--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -82,7 +82,7 @@
       pickerPosition: "bottom-left",
     });
   </script>
-  <script src="../Static/js/jquery-1.11.1.js"></script>
+  <script src="../static/js/jquery-1.11.1.js"></script>
   <script>
     $(function () {
 
