--- a/src/main/resources/templates/checkOut.html
+++ b/src/main/resources/templates/checkOut.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -54,9 +54,9 @@
       </div>
     </div>
 
-    <a href="index.html" class="back-btn">Back</a>
+    <a href="index.html" th:href="@{/index}"class="back-btn">Back</a>
   </body>
-  <script src="../Static/js/jquery-1.11.1.js"></script>
+  <script src="../static/js/jquery-1.11.1.js"></script>
  <script>
    $(function () {
 
