--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -79,7 +79,7 @@
     </div>
 </div>
 
-<a href="index.html" class="back-btn">Back</a>
+<a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
 </body>
 
 </html>
