页面依赖调整

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -45,9 +46,9 @@
         </tbody>
       </table>
     </div>
-    <a href="../templates/index.html" class="back-btn">Back</a>
+    <a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
   </body>
-  <script src="../static/js/jquery-1.11.1.js"></script>
+  <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script>
     $(function () {
 
