--- a/src/main/resources/templates/billPage.html
+++ b/src/main/resources/templates/billPage.html
@@ -41,10 +41,9 @@
     </div>
 </div>
 
-<a href="index.html" th:href="@{/index}"  class="back-btn">Back</a>
+<a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
 </body>
-<script src="../static/js/jquery-1.11.1.js"></script>
-<script scr="../static/js/moment.js"></script>
+<script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
     $(function () {
 
