--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -99,6 +99,7 @@
         </a>
       </div>
     </div>
-    <a href="index.html" class="back-btn">Back</a>
+    <a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
   </body>
+  <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </html>
