--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 
 <head>
@@ -70,7 +71,7 @@
       元
     </div>
   </div>
-  <a href="index.html" class="back-btn">Back</a>
+  <a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
 
   <script>
     $(".form_datetime").datetimepicker({
@@ -82,7 +83,7 @@
       pickerPosition: "bottom-left",
     });
   </script>
-  <script src="../static/js/jquery-1.11.1.js"></script>
+  <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script>
     $(function () {
 
