--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -81,5 +81,5 @@
 
 <a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
 </body>
-
+<script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </html>
