--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
     }
   </style>
 </head>
-<script src="../Static/js/jquery-1.11.1.js"></script>
+<script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 
 <body>
 <div class="container p-5">
@@ -95,7 +95,7 @@
     </form>
   </div>
 </div>
-<a href="index.html" class="back-btn">Back</a>
+<a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
 </body>
 <!--<script>-->
 <!--  $(function () {-->
