--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -87,9 +87,9 @@
         </form>
     </div>
 </div>
-<a href="index.html" class="back-btn">Back</a>
+<a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
 </body>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
 
     $(function () {
