修改了back回退键

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -95,7 +95,7 @@
     </form>
   </div>
 </div>
-<a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
+<a href="index.html" th:href="@{/}" class="back-btn">Back</a>
 </body>
 <!--<script>-->
 <!--  $(function () {-->
