--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -71,7 +71,7 @@
       元
     </div>
   </div>
-  <a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
+  <a href="index.html" th:href="@{/}" class="back-btn">Back</a>
 
   <script>
     $(".form_datetime").datetimepicker({
