--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -46,7 +46,7 @@
         </tbody>
       </table>
     </div>
-    <a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
+    <a href="index.html" th:href="@{/}" class="back-btn">Back</a>
   </body>
   <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script>
