--- a/src/main/resources/templates/checkOut.html
+++ b/src/main/resources/templates/checkOut.html
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <a href="index.html" th:href="@{/index}" class="back-btn">Back</a>
+    <a href="index.html" th:href="@{/}" class="back-btn">Back</a>
   </body>
   <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
  <script>
