PageController中注册加上了密码，ReceptionController中账单的返回

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
                 type="password"
                 class="form-control"
                 placeholder="请输入密码"
-                th:field="*{userId}"
+                th:field="*{password}"
         />
       </div>
       <div class="form-group d-flex">
@@ -82,7 +82,7 @@
                       type="password"
                       class="form-control"
                       placeholder="请输入密码"
-                      th:field="*{userId}"
+                      th:field="*{password}"
               />
             </div>
             <input type="submit" value="Submit" text="登录" class="btn blue2 text-white d-block m-auto px-4"/>
