--- a/src/main/resources/templates/billPage.html
+++ b/src/main/resources/templates/billPage.html
@@ -56,6 +56,7 @@
                     user_id: userId
                 },
                 success: function (data) {
+                    alert(data);
                     console.log("data",data);
 
                 }
