PageController的注册保存修改

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
 <body>
 <div class="container p-5">
   <div class="row my-5 p-3">
-    <form class="col m-5 p-3" th:action="@{/userReg}" th:href="@{/userReg}" th:object="${userLogin}" method="post">
+    <form class="col m-5 p-3" th:action="@{/userReg}" th:href="@{/userReg}" th:object="${userLogin}" method="get">
       <p class="h3 py-2 m-auto">用户注册</p><br><br>
       <div class="form-group d-flex">
         <label class="d-block">用户id</label>
